# AI-Database-Agent

./: .gitignore  README.md  agent_core.py  chat_desktop.py  database.py  hybrid.py  hybrid_api.py  index.html  main.py  models.py  pyproject.toml  students.db  terminal.py  university.db
static/: script.js  style.css
templates/: index.html
