[project]
name = "zero-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "fastapi[standard]>=0.123.0",
    "google-genai>=1.52.0",
    "langchain>=1.1.0",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langgraph>=1.0.4",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.27",
    "tk>=0.1.0",
]
